--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
- <!--           <plugin>
-                <groupId>com.zenjava</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.8.3</version>
-                <configuration>
-                    <mainClass>sample.Main</mainClass>
-                </configuration>
-            </plugin>-->
         </plugins>
     </build>
 
@@ -36,6 +28,13 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.10</version>
+        </dependency>
+        <!-- Mongo -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
